[gd_scene load_steps=28 format=4 uid="uid://25vg8cgonqr7"]

[ext_resource type="Script" path="res://scenes/room/room.gd" id="1_qwrtk"]
[ext_resource type="Texture2D" uid="uid://nekkimoie0lu" path="res://assets/sprites/tileset.png" id="1_yeuhy"]
[ext_resource type="Script" path="res://scenes/room/battle_room/battle_room.gd" id="3_a2nkw"]
[ext_resource type="PackedScene" uid="uid://doda1da8hs7v2" path="res://scenes/enemies/weak_slime.tscn" id="4_b4e5a"]
[ext_resource type="PackedScene" uid="uid://dj7uo8bme7s1a" path="res://scenes/game_action_roll/game_action_roll.tscn" id="5_cy406"]
[ext_resource type="PackedScene" uid="uid://cjam2yvuio7vy" path="res://scenes/enemies/medium_slime.tscn" id="5_peou8"]
[ext_resource type="PackedScene" uid="uid://bl3sat4bdw8k5" path="res://scenes/enemies/hard_slime.tscn" id="6_8fgqq"]
[ext_resource type="Script" path="res://scenes/room/navigation_room/navigation_room.gd" id="6_jbu2g"]
[ext_resource type="Script" path="res://scenes/room/shop_room/shop_room.gd" id="6_krqgk"]
[ext_resource type="Script" path="res://scenes/room/upgrade_room.gd" id="6_w5gya"]
[ext_resource type="Script" path="res://resources/game_action.gd" id="7_vyxx6"]
[ext_resource type="Texture2D" uid="uid://duqogn0tr5t7v" path="res://assets/sprites/icons/arrow.png" id="7_yvj04"]
[ext_resource type="Script" path="res://ressource_beans/attack_game_action.gd" id="8_xh65y"]
[ext_resource type="Script" path="res://ressource_beans/heal_game_action.gd" id="9_3l043"]
[ext_resource type="Script" path="res://ressource_beans/shield_game_action.gd" id="10_ucfv5"]
[ext_resource type="Theme" uid="uid://cfbeauogvefm7" path="res://themes/main_theme.tres" id="14_lm80l"]
[ext_resource type="AudioStream" uid="uid://kld2k53nko6t" path="res://assets/sounds/sfx/roll_beep.wav" id="16_6v3k3"]
[ext_resource type="AudioStream" uid="uid://c5m3jrdsdsrbv" path="res://assets/sounds/sfx/roll_end.wav" id="17_c0mcl"]
[ext_resource type="PackedScene" uid="uid://r1w3ak6rj4sg" path="res://scenes/portal/portal.tscn" id="19_a81r6"]
[ext_resource type="Texture2D" uid="uid://vncksqpxhdil" path="res://assets/sprites/icons/attack.png" id="19_xv6wj"]
[ext_resource type="Texture2D" uid="uid://b0w251fyde0dh" path="res://assets/sprites/icons/shield.png" id="20_5pcku"]
[ext_resource type="Texture2D" uid="uid://b5irsnjnocxbu" path="res://assets/sprites/icons/heal.png" id="21_8q0um"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_67r2k"]
texture = ExtResource("1_yeuhy")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_pt2y0"]
sources/0 = SubResource("TileSetAtlasSource_67r2k")

[sub_resource type="Resource" id="Resource_86lsb"]
script = ExtResource("8_xh65y")
level = 0

[sub_resource type="Resource" id="Resource_e66q1"]
script = ExtResource("9_3l043")
level = 0

[sub_resource type="Resource" id="Resource_rdc2q"]
script = ExtResource("10_ucfv5")
level = 0

[node name="Room" type="Node2D"]
z_index = -2
z_as_relative = false
script = ExtResource("1_qwrtk")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AADx//j/AAAAAAAAAADx//n/AAAAAAAAAADx//r/AAAAAAAAAADx//v/AAAAAAAAAADx//z/AAAAAAAAAADx//3/AAAAAAAAAADx//7/AAAAAAAAAADx////AAAAAAAAAADx/wAAAAAAAAAAAADx/wEAAAAAAAAAAADx/wIAAAAAAAAAAADx/wMAAAAAAAAAAADx/wQAAAAAAAAAAADx/wUAAAAAAAAAAADx/wYAAAAAAAAAAADx/wcAAAAAAAAAAADx/wgAAAAAAAAAAADx/wkAAAAAAAAAAADy//j/AAAAAAAAAADy//n/AAAAAAAAAADy//r/AAAAAAAAAADy//v/AAAAAAAAAADy//z/AAAAAAAAAADy//3/AAAAAAAAAADy//7/AAAAAAAAAADy////AAAAAAAAAADy/wAAAAAAAAAAAADy/wEAAAAAAAAAAADy/wIAAAAAAAAAAADy/wMAAAAAAAAAAADy/wQAAAAAAAAAAADy/wUAAAAAAAAAAADy/wYAAAAAAAAAAADy/wcAAAAAAAAAAADy/wgAAAAAAAAAAADy/wkAAAAAAAAAAADz//j/AAAAAAAAAADz//n/AAAAAAAAAADz//r/AAAAAAAAAADz//v/AAAAAAAAAADz//z/AAAAAAAAAADz//3/AAAAAAAAAADz//7/AAAAAAAAAADz////AAAAAAAAAADz/wAAAAAAAAAAAADz/wEAAAAAAAAAAADz/wIAAAAAAAAAAADz/wMAAAAAAAAAAADz/wQAAAAAAAAAAADz/wUAAAAAAAAAAADz/wYAAAAAAAAAAADz/wcAAAAAAAAAAADz/wgAAAAAAAAAAADz/wkAAAAAAAAAAAD0//j/AAAAAAAAAAD0//n/AAAAAAAAAAD0//r/AAAAAAAAAAD0//v/AAAAAAAAAAD0//z/AAAAAAAAAAD0//3/AAAAAAAAAAD0//7/AAAAAAAAAAD0////AAAAAAAAAAD0/wAAAAAAAAAAAAD0/wEAAAAAAAAAAAD0/wIAAAAAAAAAAAD0/wMAAAAAAAAAAAD0/wQAAAAAAAAAAAD0/wUAAAAAAAAAAAD0/wYAAAAAAAAAAAD0/wcAAAAAAAAAAAD0/wgAAAAAAAAAAAD0/wkAAAAAAAAAAAD1//j/AAAAAAAAAAD1//n/AAAAAAAAAAD1//r/AAAAAAAAAAD1//v/AAAAAAAAAAD1//z/AAAAAAAAAAD1//3/AAAAAAAAAAD1//7/AAAAAAAAAAD1////AAAAAAAAAAD1/wAAAAAAAAAAAAD1/wEAAAAAAAAAAAD1/wIAAAAAAAAAAAD1/wMAAAAAAAAAAAD1/wQAAAAAAAAAAAD1/wUAAAAAAAAAAAD1/wYAAAAAAAAAAAD1/wcAAAAAAAAAAAD1/wgAAAAAAAAAAAD1/wkAAAAAAAAAAAD2//j/AAAAAAAAAAD2//n/AAAAAAAAAAD2//r/AAAAAAAAAAD2//v/AAAAAAAAAAD2//z/AAAAAAAAAAD2//3/AAAAAAAAAAD2//7/AAAAAAAAAAD2////AAAAAAAAAAD2/wAAAAAAAAAAAAD2/wEAAAAAAAAAAAD2/wIAAAAAAAAAAAD2/wMAAAAAAAAAAAD2/wQAAAAAAAAAAAD2/wUAAAAAAAAAAAD2/wYAAAAAAAAAAAD2/wcAAAAAAAAAAAD2/wgAAAAAAAAAAAD2/wkAAAAAAAAAAAD3//j/AAAAAAAAAAD3//n/AAAAAAAAAAD3//r/AAAAAAAAAAD3//v/AAAAAAAAAAD3//z/AAAAAAAAAAD3//3/AAAAAAAAAAD3//7/AAAAAAAAAAD3////AAAAAAAAAAD3/wAAAAAAAAAAAAD3/wEAAAAAAAAAAAD3/wIAAAAAAAAAAAD3/wMAAAAAAAAAAAD3/wQAAAAAAAAAAAD3/wUAAAAAAAAAAAD3/wYAAAAAAAAAAAD3/wcAAAAAAAAAAAD3/wgAAAAAAAAAAAD3/wkAAAAAAAAAAAD4//j/AAAAAAAAAAD4//n/AAAAAAAAAAD4//r/AAAAAAAAAAD4//v/AAAAAAAAAAD4//z/AAAAAAAAAAD4//3/AAAAAAAAAAD4//7/AAAAAAAAAAD4////AAAAAAAAAAD4/wAAAAAAAAAAAAD4/wEAAAAAAAAAAAD4/wIAAAAAAAAAAAD4/wMAAAAAAAAAAAD4/wQAAAAAAAAAAAD4/wUAAAAAAAAAAAD4/wYAAAAAAAAAAAD4/wcAAAAAAAAAAAD4/wgAAAAAAAAAAAD4/wkAAAAAAAAAAAD5//j/AAAAAAAAAAD5//n/AAAAAAAAAAD5//r/AAAAAAAAAAD5//v/AAAAAAAAAAD5//z/AAAAAAAAAAD5//3/AAAAAAAAAAD5//7/AAAAAAAAAAD5////AAAAAAAAAAD5/wAAAAAAAAAAAAD5/wEAAAAAAAAAAAD5/wIAAAAAAAAAAAD5/wMAAAAAAAAAAAD5/wQAAAAAAAAAAAD5/wUAAAAAAAAAAAD5/wYAAAAAAAAAAAD5/wcAAAAAAAAAAAD5/wgAAAAAAAAAAAD5/wkAAAAAAAAAAAD6//j/AAAAAAAAAAD6//n/AAAAAAAAAAD6//r/AAAAAAAAAAD6//v/AAAAAAAAAAD6//z/AAAAAAAAAAD6//3/AAAAAAAAAAD6//7/AAAAAAAAAAD6////AAAAAAAAAAD6/wAAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wIAAAAAAAAAAAD6/wMAAAAAAAAAAAD6/wQAAAAAAAAAAAD6/wUAAAAAAAAAAAD6/wYAAAAAAAAAAAD6/wcAAAAAAAAAAAD6/wgAAAAAAAAAAAD6/wkAAAAAAAAAAAD7//j/AAAAAAAAAAD7//n/AAAAAAAAAAD7//r/AAAAAAAAAAD7//v/AAAAAAAAAAD7//z/AAAAAAAAAAD7//3/AAAAAAAAAAD7//7/AAAAAAAAAAD7////AAAAAAAAAAD7/wAAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wQAAAAAAAAAAAD7/wUAAAAAAAAAAAD7/wYAAAAAAAAAAAD7/wcAAAAAAAAAAAD7/wgAAAAAAAAAAAD7/wkAAAAAAAAAAAD8//j/AAAAAAAAAAD8//n/AAAAAAAAAAD8//r/AAAAAAAAAAD8//v/AAAAAAAAAAD8//z/AAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAAAAAAAAAD8/wcAAAAAAAAAAAD8/wgAAAAAAAAAAAD8/wkAAAAAAAAAAAD9//j/AAAAAAAAAAD9//n/AAAAAAAAAAD9//r/AAAAAAAAAAD9//v/AAAAAAAAAAD9//z/AAAAAAAAAAD9//3/AAAAAAAAAAD9//7/AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAD9/wMAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wUAAAAAAAAAAAD9/wYAAAAAAAAAAAD9/wcAAAAAAAAAAAD9/wgAAAAAAAAAAAD9/wkAAAAAAAAAAAD+//j/AAAAAAAAAAD+//n/AAAAAAAAAAD+//r/AAAAAAAAAAD+//v/AAAAAAAAAAD+//z/AAAAAAAAAAD+//3/AAAAAAAAAAD+//7/AAAAAAAAAAD+////AAAAAAAAAAD+/wAAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wQAAAAAAAAAAAD+/wUAAAAAAAAAAAD+/wYAAAAAAAAAAAD+/wcAAAAAAAAAAAD+/wgAAAAAAAAAAAD+/wkAAAAAAAAAAAD///j/AAAAAAAAAAD///n/AAAAAAAAAAD///r/AAAAAAAAAAD///v/AAAAAAAAAAD///z/AAAAAAAAAAD///3/AAAAAAAAAAD///7/AAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAAAAPj/AAAAAAAAAAAAAPn/AAAAAAAAAAAAAPr/AAAAAAAAAAAAAPv/AAAAAAAAAAAAAPz/AAAAAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAABAPj/AAAAAAAAAAABAPn/AAAAAAAAAAABAPr/AAAAAAAAAAABAPv/AAAAAAAAAAABAPz/AAAAAAAAAAABAP3/AAAAAAAAAAABAP7/AAAAAAAAAAABAP//AAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAACAPj/AAAAAAAAAAACAPn/AAAAAAAAAAACAPr/AAAAAAAAAAACAPv/AAAAAAAAAAACAPz/AAAAAAAAAAACAP3/AAAAAAAAAAACAP7/AAAAAAAAAAACAP//AAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAADAPj/AAAAAAAAAAADAPn/AAAAAAAAAAADAPr/AAAAAAAAAAADAPv/AAAAAAAAAAADAPz/AAAAAAAAAAADAP3/AAAAAAAAAAADAP7/AAAAAAAAAAADAP//AAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAAEAPj/AAAAAAAAAAAEAPn/AAAAAAAAAAAEAPr/AAAAAAAAAAAEAPv/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAP3/AAAAAAAAAAAEAP7/AAAAAAAAAAAEAP//AAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAFAPj/AAAAAAAAAAAFAPn/AAAAAAAAAAAFAPr/AAAAAAAAAAAFAPv/AAAAAAAAAAAFAPz/AAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAGAPj/AAAAAAAAAAAGAPn/AAAAAAAAAAAGAPr/AAAAAAAAAAAGAPv/AAAAAAAAAAAGAPz/AAAAAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAHAPj/AAAAAAAAAAAHAPn/AAAAAAAAAAAHAPr/AAAAAAAAAAAHAPv/AAAAAAAAAAAHAPz/AAAAAAAAAAAHAP3/AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP//AAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAIAPj/AAAAAAAAAAAIAPn/AAAAAAAAAAAIAPr/AAAAAAAAAAAIAPv/AAAAAAAAAAAIAPz/AAAAAAAAAAAIAP3/AAAAAAAAAAAIAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAJAPj/AAAAAAAAAAAJAPn/AAAAAAAAAAAJAPr/AAAAAAAAAAAJAPv/AAAAAAAAAAAJAPz/AAAAAAAAAAAJAP3/AAAAAAAAAAAJAP7/AAAAAAAAAAAJAP//AAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAKAPj/AAAAAAAAAAAKAPn/AAAAAAAAAAAKAPr/AAAAAAAAAAAKAPv/AAAAAAAAAAAKAPz/AAAAAAAAAAAKAP3/AAAAAAAAAAAKAP7/AAAAAAAAAAAKAP//AAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAALAPj/AAAAAAAAAAALAPn/AAAAAAAAAAALAPr/AAAAAAAAAAALAPv/AAAAAAAAAAALAPz/AAAAAAAAAAALAP3/AAAAAAAAAAALAP7/AAAAAAAAAAALAP//AAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAAMAPj/AAAAAAAAAAAMAPn/AAAAAAAAAAAMAPr/AAAAAAAAAAAMAPv/AAAAAAAAAAAMAPz/AAAAAAAAAAAMAP3/AAAAAAAAAAAMAP7/AAAAAAAAAAAMAP//AAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAANAPj/AAAAAAAAAAANAPn/AAAAAAAAAAANAPr/AAAAAAAAAAANAPv/AAAAAAAAAAANAPz/AAAAAAAAAAANAP3/AAAAAAAAAAANAP7/AAAAAAAAAAANAP//AAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAAOAPj/AAAAAAAAAAAOAPn/AAAAAAAAAAAOAPr/AAAAAAAAAAAOAPv/AAAAAAAAAAAOAPz/AAAAAAAAAAAOAP3/AAAAAAAAAAAOAP7/AAAAAAAAAAAOAP//AAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAPAPj/AAAAAAAAAAAPAPn/AAAAAAAAAAAPAPr/AAAAAAAAAAAPAPv/AAAAAAAAAAAPAPz/AAAAAAAAAAAPAP3/AAAAAAAAAAAPAP7/AAAAAAAAAAAPAP//AAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAQAPj/AAAAAAAAAAAQAPn/AAAAAAAAAAAQAPr/AAAAAAAAAAAQAPv/AAAAAAAAAAAQAPz/AAAAAAAAAAAQAP3/AAAAAAAAAAAQAP7/AAAAAAAAAAAQAP//AAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAADx//f/AAAAAAAAAADy//f/AAAAAAAAAADz//f/AAAAAAAAAAD0//f/AAAAAAAAAAD1//f/AAAAAAAAAAD2//f/AAAAAAAAAAD3//f/AAAAAAAAAAD4//f/AAAAAAAAAAD5//f/AAAAAAAAAAD6//f/AAAAAAAAAAD7//f/AAAAAAAAAAD8//f/AAAAAAAAAAD9//f/AAAAAAAAAAD+//f/AAAAAAAAAAD///f/AAAAAAAAAAAAAPf/AAAAAAAAAAABAPf/AAAAAAAAAAACAPf/AAAAAAAAAAADAPf/AAAAAAAAAAAEAPf/AAAAAAAAAAAFAPf/AAAAAAAAAAAGAPf/AAAAAAAAAAAHAPf/AAAAAAAAAAAIAPf/AAAAAAAAAAAJAPf/AAAAAAAAAAAKAPf/AAAAAAAAAAALAPf/AAAAAAAAAAAMAPf/AAAAAAAAAAANAPf/AAAAAAAAAAAOAPf/AAAAAAAAAAAPAPf/AAAAAAAAAAAQAPf/AAAAAAAAAAA=")
tile_set = SubResource("TileSet_pt2y0")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAD7////AAABAAAAAAD7//7/AAABAAAAAAD7//3/AAABAAAAAAD7//z/AAABAAAAAAD///v/AAABAAAAAAD+//v/AAABAAAAAAD9//v/AAABAAAAAAD8//v/AAABAAAAAAD7//v/AAABAAAAAAD7/wAAAAABAAAAAAD7/wEAAAABAAAAAAD7/wIAAAABAAAAAAD7/wMAAAABAAAAAAD7/wQAAAABAAAAAAD8/wQAAAABAAAAAAD9/wQAAAABAAAAAAD+/wQAAAABAAAAAAD//wQAAAABAAAAAAAAAAQAAAABAAAAAAABAAQAAAABAAAAAAACAAQAAAABAAAAAAADAAQAAAABAAAAAAAEAAQAAAABAAAAAAAAAPv/AAABAAAAAAABAPv/AAABAAAAAAACAPv/AAABAAAAAAADAPv/AAABAAAAAAAEAPv/AAABAAAAAAAEAPz/AAABAAAAAAAEAP3/AAABAAAAAAAEAP7/AAABAAAAAAAEAP//AAABAAAAAAAEAAAAAAABAAAAAAAEAAEAAAABAAAAAAAEAAMAAAABAAAAAAAEAAIAAAABAAAAAAD8//z/AAACAAAAAAD9//z/AAACAAAAAAD9//3/AAACAAAAAAD+//3/AAACAAAAAAD+//7/AAACAAAAAAD///7/AAACAAAAAAD/////AAACAAAAAAAAAAAAAAACAAAAAAAAAAEAAAACAAAAAAABAAEAAAACAAAAAAABAP3/AAACAAAAAAABAPz/AAACAAAAAAAAAPz/AAACAAAAAAD///z/AAACAAAAAAD+//z/AAACAAAAAAD///3/AAACAAAAAAAAAP3/AAACAAAAAAAAAP7/AAACAAAAAAAAAP//AAACAAAAAAABAP//AAACAAAAAAABAP7/AAACAAAAAAACAP7/AAACAAAAAAACAP3/AAACAAAAAAACAPz/AAACAAAAAAADAPz/AAACAAAAAAADAP3/AAACAAAAAAADAP7/AAACAAAAAAADAP//AAACAAAAAAACAP//AAACAAAAAAACAAAAAAACAAAAAAABAAAAAAACAAAAAAACAAEAAAACAAAAAAACAAIAAAACAAAAAAABAAIAAAACAAAAAAAAAAIAAAACAAAAAAD//wIAAAACAAAAAAD//wEAAAACAAAAAAD//wAAAAACAAAAAAD+/wAAAAACAAAAAAD+////AAACAAAAAAD9////AAACAAAAAAD9//7/AAACAAAAAAD8//7/AAACAAAAAAD8//3/AAACAAAAAAD8////AAACAAAAAAD8/wAAAAACAAAAAAD8/wEAAAACAAAAAAD8/wIAAAACAAAAAAD8/wMAAAACAAAAAAD9/wMAAAACAAAAAAD9/wIAAAACAAAAAAD9/wEAAAACAAAAAAD9/wAAAAACAAAAAAD+/wEAAAACAAAAAAD+/wIAAAACAAAAAAD+/wMAAAACAAAAAAD//wMAAAACAAAAAAAAAAMAAAACAAAAAAABAAMAAAACAAAAAAACAAMAAAACAAAAAAADAAMAAAACAAAAAAADAAIAAAACAAAAAAADAAEAAAACAAAAAAADAAAAAAACAAAAAAA=")
tile_set = SubResource("TileSet_pt2y0")

[node name="BattleRoom" type="Node2D" parent="."]
visible = false
script = ExtResource("3_a2nkw")
enemies = Array[PackedScene]([ExtResource("4_b4e5a"), ExtResource("5_peou8"), ExtResource("6_8fgqq")])

[node name="EnemyPosition" type="Marker2D" parent="BattleRoom"]
position = Vector2(80, 0)

[node name="GameActionRoll" parent="BattleRoom" instance=ExtResource("5_cy406")]
unique_name_in_owner = true
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 30.0
offset_right = 66.0
offset_bottom = 30.0
grow_horizontal = 2
roll_wait_time = 0.14
accelerate_roll = true
acceleration_step = 0.02
accelerate_each_cycle = 2

[node name="BattleTuto" type="Label" parent="BattleRoom"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 233.0
offset_top = -31.0
offset_right = 483.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14_lm80l")
theme_override_font_sizes/font_size = 14
text = "Above the enemy you can see the next action he intends to perform."
horizontal_alignment = 1
autowrap_mode = 2

[node name="BattleTuto2" type="Label" parent="BattleRoom"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 233.0
offset_top = 50.0
offset_right = 483.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14_lm80l")
theme_override_font_sizes/font_size = 14
text = "The longer you take to perform your action, the faster it will scroll, so act fast to stay in control of your actions."
horizontal_alignment = 1
autowrap_mode = 2

[node name="UpgradeRoom" type="Node2D" parent="."]
visible = false
script = ExtResource("6_w5gya")

[node name="UpgradeGameActionRoll" parent="UpgradeRoom" instance=ExtResource("5_cy406")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 30.0
offset_right = 66.0
offset_bottom = 30.0
grow_horizontal = 2
display_price = true
is_upgrade = true
roll_wait_time = 0.8

[node name="UpgradeTuto" type="Label" parent="UpgradeRoom"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -188.76
offset_right = 190.0
offset_bottom = -95.76
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14_lm80l")
theme_override_font_sizes/font_size = 14
text = "You can buy to upgrade the actions on your bar.
You can also delete void actions."
horizontal_alignment = 1
autowrap_mode = 2

[node name="ShopRoom" type="Node2D" parent="."]
visible = false
script = ExtResource("6_krqgk")
possible_game_actions = Array[ExtResource("7_vyxx6")]([SubResource("Resource_86lsb"), SubResource("Resource_e66q1"), SubResource("Resource_rdc2q")])

[node name="ShopGameActionRoll" parent="ShopRoom" instance=ExtResource("5_cy406")]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 30.0
offset_right = 66.0
offset_bottom = 30.0
grow_horizontal = 2
display_price = true
roll_wait_time = 0.8

[node name="ShopTuto" type="Label" parent="ShopRoom"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -188.76
offset_right = 190.0
offset_bottom = -95.76
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14_lm80l")
theme_override_font_sizes/font_size = 14
text = "You can purchase a new action to add to your action bar.
However, if you do, an unnecessary action will be added as well."
horizontal_alignment = 1
autowrap_mode = 2

[node name="NavigationRoom" type="Node2D" parent="."]
visible = false
script = ExtResource("6_jbu2g")

[node name="Portals" type="Node2D" parent="NavigationRoom"]

[node name="Arrows" type="Node2D" parent="NavigationRoom"]
visible = false

[node name="TopArrow" type="Sprite2D" parent="NavigationRoom/Arrows"]
position = Vector2(0, -100)
rotation = -1.5708
scale = Vector2(4, 4)
texture = ExtResource("7_yvj04")
hframes = 2

[node name="RightArrow" type="Sprite2D" parent="NavigationRoom/Arrows"]
position = Vector2(100, 0)
scale = Vector2(4, 4)
texture = ExtResource("7_yvj04")
hframes = 2

[node name="BottomArrow" type="Sprite2D" parent="NavigationRoom/Arrows"]
position = Vector2(0, 100)
rotation = 1.5708
scale = Vector2(4, 4)
texture = ExtResource("7_yvj04")
hframes = 2

[node name="LeftArrow" type="Sprite2D" parent="NavigationRoom/Arrows"]
position = Vector2(-100, 0)
rotation = -3.14159
scale = Vector2(4, 4)
texture = ExtResource("7_yvj04")
hframes = 2

[node name="NavigationRollTimer" type="Timer" parent="NavigationRoom"]
wait_time = 0.3

[node name="RollSFX" type="AudioStreamPlayer" parent="NavigationRoom"]
unique_name_in_owner = true
stream = ExtResource("16_6v3k3")
volume_db = -5.0
max_polyphony = 5

[node name="EndRollSFX" type="AudioStreamPlayer" parent="NavigationRoom"]
unique_name_in_owner = true
stream = ExtResource("17_c0mcl")
volume_db = -5.0

[node name="PortalTuto" type="Node2D" parent="NavigationRoom"]
visible = false

[node name="Battle" parent="NavigationRoom/PortalTuto" instance=ExtResource("19_a81r6")]
position = Vector2(-280, -175)
portal_type = 0

[node name="Shop" parent="NavigationRoom/PortalTuto" instance=ExtResource("19_a81r6")]
position = Vector2(-280, -85)

[node name="Upgrade" parent="NavigationRoom/PortalTuto" instance=ExtResource("19_a81r6")]
position = Vector2(-280, 5)
portal_type = 2

[node name="BattleLabel" type="Label" parent="NavigationRoom/PortalTuto"]
offset_left = -370.0
offset_top = -215.0
offset_right = -307.0
offset_bottom = -192.0
theme = ExtResource("14_lm80l")
text = "Battle"

[node name="ShopLabel" type="Label" parent="NavigationRoom/PortalTuto"]
offset_left = -370.0
offset_top = -125.0
offset_right = -307.0
offset_bottom = -102.0
theme = ExtResource("14_lm80l")
text = "Shop"

[node name="UpgradeLabel" type="Label" parent="NavigationRoom/PortalTuto"]
offset_left = -390.0
offset_top = -35.0
offset_right = -304.0
offset_bottom = -12.0
theme = ExtResource("14_lm80l")
text = "Upgrade"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 246.0
offset_top = -216.0
offset_right = 564.0
offset_bottom = -88.0
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("19_xv6wj")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("14_lm80l")
text = ": Deals one damage"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("20_5pcku")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
theme = ExtResource("14_lm80l")
text = ": Protect from one damage"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("21_8q0um")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3/MarginContainer"]
layout_mode = 2
theme = ExtResource("14_lm80l")
text = ": Heals one damage"

[connection signal="roll_stopped" from="BattleRoom/GameActionRoll" to="BattleRoom" method="_on_game_action_roll_roll_stopped"]
[connection signal="roll_stopped" from="UpgradeRoom/UpgradeGameActionRoll" to="UpgradeRoom" method="on_upgrade_selected"]
[connection signal="roll_stopped" from="ShopRoom/ShopGameActionRoll" to="ShopRoom" method="shop_roll_stop"]
[connection signal="timeout" from="NavigationRoom/NavigationRollTimer" to="NavigationRoom" method="_on_navigation_roll_timer_timeout"]
